Add Micro Tests